# rocm-tests

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  bandit.yaml  conftest.py  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt  rocm-test.toml  testplan.ini  trivy.yaml  zizmor.yml
.claude/: skills.md
.claude/agents/: creator.md  porter.md  refiner.md
.claude/commands/: creator.md  porter.md  refiner.md
.github/: CODEOWNERS
.github/workflows/: bandit.yml  bandit_main.yml  codeql.yml  e2e-nightly.yml  e2e-tests.yml  gitleaks.yml  pre-commit.yml  security.yml  trivy.yml  trivy_main.yml  zizmor.yml  zizmor_main.yml
docs/: development-guide.md  test-framework-architecture.md
framework/: __init__.py
framework/builder/: __init__.py  binary_builder.py
framework/builder/cmake/: rocm_setup.cmake
framework/common/: __init__.py  helpers.py  workspace_layout.py
framework/config/: __init__.py  loader.py
framework/executors/: __init__.py  abstract_executor.py  background_process.py  container_executor.py  cpu_executor.py  dry_run_executor.py  executor_factory.py  executor_group.py  labeled_executor.py  local_executor.py  log_config.py  ssh_executor.py  ssh_gpu_executor.py
framework/gpu/: __init__.py  allocator.py  detector.py  drain.py  monitor.py
framework/logging/: __init__.py  test_logger.py
framework/markers/: __init__.py  gpu_count.py  linter.py  taxonomy.py
framework/nodes/: __init__.py  gpu_file_lock.py  node_pool.py  node_spec.py  pending_tracker.py
framework/os_adapter/: __init__.py  abstract_adapter.py  linux_adapter.py  windows_adapter.py
framework/plugins/: __init__.py  artifacts_plugin.py  baseline_plugin.py  builder_plugin.py  executor_plugin.py  gpu_plugin.py  health_plugin.py  install_plugin.py  markers_plugin.py  os_plugin.py  prereqs_plugin.py  remote_node_plugin.py  reports_plugin.py  retry_plugin.py  scheduling_plugin.py
framework/reporting/: __init__.py  allure_reporter.py
framework/rocm/: __init__.py
framework/rocm/libs/: __init__.py  amd_smi.py  gtest.py  hip.py  rccl.py  stack.py
framework/scheduling/: __init__.py  dynamic_scheduler.py
scan_tools/github_actions/: bandit.py  gitleaks.py  trivy.py  zizmor.py
tests/: __init__.py  conftest.py
tests/common/: __init__.py  _cmake_build.py  factories.py  spirv.py
tests/common/cmake/: rocm_setup.cmake
tests/common/include/: utility.hpp
tests/common/ml_provisioning/: README.md  __init__.py  fixtures.py  providers.py  provisioner.py  requirements-pytorch.txt  spec.py  workload.py
tests/dry_run/: __init__.py  test_config_loader.py  test_gpu_indices_scheduling.py  test_manual_gpu_allocator.py
tests/e2e/: __init__.py
tests/e2e/compiler/: __init__.py  conftest.py  test_hip_app_build_using_hipcc.py  test_hip_basic_spirv.py  test_llvm.py
tests/e2e/compiler/src/spirv/: CMakeLists.txt  vector_add.hip
tests/e2e/concurrent_collectives/: conftest.py  test_concurrent_collectives.py
tests/e2e/hip_directed/: conftest.py  test_hip_directed_catch2.py
tests/e2e/hip_runtime/: conftest.py  test_hip_invalid_codeobject_load.py  test_hip_multiprocess_app.py  test_hip_samples.py  test_hip_samples_spirv.py  test_multi_stream_serialization.py  test_split_barrier_stress.py
tests/e2e/hip_runtime/src/: CMakeLists.txt  hip_invalid_codeobject_load_test.cpp  multi_stream_serialization.cpp
tests/e2e/hip_runtime/src/mps/: CMakeLists.txt
tests/e2e/hip_runtime/src/mps/scripts/: check_results.py
tests/e2e/hip_runtime/src/mps/src/: main.cpp
tests/e2e/hip_runtime/src/mps/src/common/: health.cpp  health.h  hip_check.h  ipc_channel.cpp  ipc_channel.h  roles.h  validator.cpp  validator.h
tests/e2e/hip_runtime/src/mps/src/kernels/: kernels.cpp  kernels.h
tests/e2e/hip_runtime/src/mps/src/roles/: compiler.cpp  compiler.h  compute.cpp  compute.h  ipc_xfer.cpp  ipc_xfer.h  library.cpp  library.h  memory_mover.cpp  memory_mover.h  monitor.cpp  monitor.h  profiler.cpp  profiler.h  role_interface.h
tests/e2e/hip_runtime/src/split_barrier_stress/: CMakeLists.txt  split_barrier_stress.cpp
tests/e2e/hipblaslt/: conftest.py  test_gemm_heuristic_workspace.py  test_hipblaslt_heuristic_workspace.py  test_hipblaslt_linear_shape_boundary.py  test_hipblaslt_shape_boundary.py  test_mini_residual_app.py
tests/e2e/hipblaslt/src/hipblaslt_heuristic_workspace/: CMakeLists.txt  hipblaslt_heuristic_workspace.hip
tests/e2e/hwq_heuristic/: conftest.py  test_hwq_compute_copy_overlap.py  test_hwq_heuristic.py  test_hwq_null_stream_protection.py  test_hwq_per_device_independence.py  test_hwq_robustness.py  test_hwq_single_stream_no_regr.py
tests/e2e/hwq_heuristic/src/: CMakeLists.txt  hwq_compute_copy_overlap_test.cpp  hwq_heuristic_test.cpp  hwq_null_stream_protection_regr.cpp  hwq_per_device_independence_test.cpp  hwq_robustness.cpp  hwq_single_stream_no_regr.cpp  test_utils.h
tests/e2e/kfd/: conftest.py  test_kfd.py
tests/e2e/quda/: _workload.py  conftest.py  test_quda.py
tests/e2e/rccl/: NOTICES.md  __init__.py  _workload.py  conftest.py  test_concurrent_distributed_collectives.py  test_distributed_collective_serialization.py  test_rccl_dual_kernel_build.py  test_rccl_error_handling.py  test_rccl_hip_graph.py  test_rccl_pat_algo.py  test_rccl_unroll_perf_matrix.py  test_rccl_with_mgpu.py
tests/e2e/rocm_examples/: conftest.py  test_rocm_examples.py
tests/e2e/rocm_libs/: _workload.py  conftest.py  test_equilibration_batch_kalman.py  (+5 more)
tests/e2e/rocm_libs/src/: CMakeLists.txt  async_mixed_precision_workflow.cpp  equilibration_batch_kalman.cpp  hip_mempool_probe.cpp  jacobian_svd_multistream.cpp  precond_conjugate_gradient.cpp  small_sliding_contact.cpp  sparse_csrrf_analysis_reuse.cpp
tests/e2e/rocprim/src/: CMakeLists.txt  main.cpp
tests/e2e/rocprim/src/include/: test_common.hpp
tests/e2e/rocprim/src/samples/: test_rocprim_samples.cpp
tests/e2e/rocprim/src/system/concurrency/: test_system_multistream.cpp
tests/e2e/rocprim/src/system/reliability/: test_system_multigpu_hmm.cpp
tests/e2e/rocprim/src/system/stress/: test_system_performance_stress.cpp
(+44 files in other folders)
